fix: hyp3 usecase example text cutoff

--- a/src/app/components/header/processing-queue/processing-signup/processing-signup.component.scss
+++ b/src/app/components/header/processing-queue/processing-signup/processing-signup.component.scss
@@ -10,8 +10,8 @@
 }
 .list-item {
   word-wrap: break-word;
-  overflow: visible;
-  height: auto;
+  overflow: visible !important;
+  height: auto !important;
 }
 .list-item-content {
   overflow: visible;
